--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-mdb-template",
   "version": "1.0.1",
   "private": true,
+  "homepage": ".",
   "license": "(EUPL-1.2)",
   "dependencies": {
-    "mdbreact": "^4.19.1",
+    "mdbreact": "^4.19.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -18,6 +19,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
