--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "react-mdb-template",
-  "version": "1.0.1",
+  "version": "v0.0.1",
   "private": true,
   "homepage": ".",
   "license": "(EUPL-1.2)",
   "dependencies": {
+    "gh-pages": "^2.1.1",
     "mdbreact": "^4.19.2",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
